--- a/python/web/pickplaz.html
+++ b/python/web/pickplaz.html
@@ -41,6 +41,9 @@
         <div class="menu-item" v-bind:class="{active : page == 2}" v-on:click="do_nav(2); setTimeout(() => {draw_stuff()})">Navigate</div>
         <div class="menu-item menu-material" v-on:click="menu_hamburger = !menu_hamburger" v-bind:class="{active : menu_hamburger}">menu
             <transition name="transition-hamburger"><div v-if="menu_hamburger">
+                <div class="menu-menu-item" v-on:click="do_sequence('belt_set_start')">belt_set_start</div>
+                <div class="menu-menu-item" v-on:click="do_sequence('belt_set_end')">belt_set_end</div>
+                <div class="menu-menu-item" v-on:click="do_sequence('belt_next')">belt_next</div>
                 <div class="menu-menu-item" v-on:click="do_sequence('home')"><div class="menu-item-material">home</div>Home Robot</div>
                 <div class="menu-menu-item" v-on:click="do_sequence('motor_off')"><div class="menu-item-material">power_off</div>Motor Off</div>
                 <div class="menu-menu-item" v-on:click="do_sequence('motor_on')"><div class="menu-item-material">power</div>Motor On</div>
@@ -110,7 +113,8 @@
                                 <td width="70px"><div class="table-button material" v-on:click="do_modify_part_state(id)">swap_calls</div> {{part_state(designator.state)}}</td>
                                 <td v-if="part.fiducial == false" width="200px">
                                     <button v-on:click="do_part_goto(designator)">view place</button>
-                                    <button v-on:click="do_feeder_goto(part.feeder)">view pick</button>
+                                    <button v-on:click="do_part_place(id)">do place</button>
+                                    <!--<button v-on:click="do_feeder_goto(part.feeder)">view pick</button>-->
                                 </td>
                                 <td v-if="part.fiducial == true"  width="200px">
                                     <button v-on:click="do_part_goto(designator)">goto</button>
@@ -127,6 +131,7 @@
 
         <transition name="transition-page"><div class="page" v-if="page == 1">
             <table>
+                <!--table for all tray feeders-->
                 <tr>
                     <th width="100px">Name</th>
                     <th width="100px">Type</th>
@@ -134,25 +139,59 @@
                     <th width="80px">Y</th>
                     <th width="80px">width</th>
                     <th width="80px">height</th>
-                    <th width="80px">Pitch</th>
+                    <th width="80px"></th>
                     <th width="80px">Rotation</th>
                     <th width="100px">State</th>
                     <th width="100px">Action</th>
                 </tr>
-                <tr v-for="(entry, name) in context.feeder"  v-bind:class="{ inactive: entry.state == 0, error: entry.state == 2 }">
+                <tr v-for="(entry, name) in context.feeder"  v-bind:class="{ inactive: entry.state == 0, error: entry.state == 2 }" v-if="entry.type == 0">
                     <td><div class="table-button material" v-on:click="do_modify_feeder_name(name)">edit</div> {{name}}</td>
                     <td><div class="table-button material" v-on:click="do_modify_feeder_type(name)">swap_calls</div> {{feeder_type(entry.type)}}</td>
                     <td><div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'x')">edit</div> {{entry.x}}</td>
                     <td><div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'y')">edit</div> {{entry.y}}</td>
                     <td><div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'width')">edit</div> {{entry.width}}</td>
                     <td><div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'height')">edit</div> {{entry.height}}</td>
-                    <td><div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'pitch')">edit</div> {{entry.pitch}}</td>
+                    <td></td>
                     <td><div class="table-button material" v-on:click="do_modify_feeder_rotation(name)">refresh</div> {{entry.rot}}</td>
                     <td><div class="table-button material" v-on:click="do_modify_feeder_state(name)">swap_calls</div> {{feeder_state(entry.state)}}</td>
                     <td>
-                        <button v-on:click="do_feeder_test(name)">test pick</button>
-                        <button v-on:click="do_feeder_goto(name)">goto</button>
+                        <!--<button v-on:click="do_feeder_test(name)">test pick</button>
+                        <button v-on:click="do_feeder_goto(name)">goto</button>-->
                         <button v-on:click="do_feeder_delete(name)">delete</button>
+                        <button v-on:click="do_sequence('test_feeder', name)">pick</button>
+                    </td>
+                </tr>
+            </table>
+            <br>
+            <table>
+                <!--table for all belt feeders-->
+                <tr>
+                    <th width="100px">Name</th>
+                    <th width="100px">Type</th>
+                    <th width="80px">Start</th>
+                    <th width="80px">End</th>
+                    <th width="80px">Offset x</th>
+                    <th width="80px">Offset Y</th>
+                    <th width="80px">Pitch</th>
+                    <th width="80px">Rotation</th>
+                    <th width="100px">State</th>
+                    <th width="100px">Action</th>
+                </tr>
+                <tr v-for="(entry, name) in context.feeder"  v-bind:class="{ inactive: entry.state == 0, error: entry.state == 2 }" v-if="entry.type == 1">
+                    <td><div class="table-button material" v-on:click="do_modify_feeder_name(name)">edit</div>{{name}}</td>
+                    <td><div class="table-button material" v-on:click="do_modify_feeder_type(name)">swap_calls</div>{{feeder_type(entry.type)}}</td>
+                    <td><div class="table-button material" v-on:click="do_sequence('belt_set_start', name)">filter_center_focus</div>{{entry.x | round}} / {{entry.y | round}}</td>
+                    <td><div class="table-button material" v-on:click="do_sequence('belt_set_end', name)">filter_center_focus</div>{{entry.x_end | round}} / {{entry.y_end | round}}</td>
+                    <td><div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'x_offset')">edit</div>{{entry.x_offset}}</td>
+                    <td><div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'y_offset')">edit</div>{{entry.y_offset}}</td>
+                    <td><div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'pitch')">edit</div>{{entry.pitch}}</td>
+                    <td><div class="table-button material" v-on:click="do_modify_feeder_rotation(name)">refresh</div>{{entry.rot}}</td>
+                    <td><div class="table-button material" v-on:click="do_modify_feeder_state(name)">swap_calls</div>{{feeder_state(entry.state)}}</td>
+                    <td>
+                        <!--<button v-on:click="do_feeder_test(name)">test pick</button>
+                        <button v-on:click="do_feeder_goto(name)">goto</button>-->
+                        <button v-on:click="do_feeder_delete(name)">delete</button>
+                        <button v-on:click="do_sequence('test_feeder', name)">pick</button>
                     </td>
                 </tr>
             </table>
