--- a/python/web/pickplaz.html
+++ b/python/web/pickplaz.html
@@ -132,76 +132,47 @@
         </div></transition>
 
         <transition name="transition-page"><div class="page" v-if="page == 1">
+            
             <table>
                 <!--table for all tray feeders-->
                 <tr>
-                    <th width="100px">Name</th>
-                    <th width="100px">Type</th>
-                    <th width="80px">X</th>
-                    <th width="80px">Y</th>
-                    <th width="80px">width</th>
-                    <th width="80px">height</th>
-                    <th width="80px"></th>
-                    <th width="80px">Rotation</th>
-                    <th width="100px">State</th>
+                    <th width="80px">Name</th>
+                    <th width="300px">Custom Settings</th>
+                    <th width="60px">Rotation</th>
+                    <th width="60px">State</th>
                     <th width="100px">Action</th>
                 </tr>
-                <tr v-for="(entry, name) in context.feeder"  v-bind:class="{ inactive: entry.state == 0, error: entry.state == 2 }" v-if="entry.type == 0">
-                    <td><div class="table-button material" v-on:click="do_modify_feeder_name(name)">edit</div> {{name}}</td>
-                    <td><div class="table-button material" v-on:click="do_modify_feeder_type(name)">swap_calls</div> {{feeder_type(entry.type)}}</td>
-                    <td><div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'x')">edit</div> {{entry.x}}</td>
-                    <td><div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'y')">edit</div> {{entry.y}}</td>
-                    <td><div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'width')">edit</div> {{entry.width}}</td>
-                    <td><div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'height')">edit</div> {{entry.height}}</td>
-                    <td></td>
+                <tr v-for="(entry, name) in context.feeder"  v-bind:class="{ inactive: entry.state == 0, error: entry.state == 2 }">
+                    <td>{{name}} ({{feeder_type(entry.type)}})</td>
+                    <td v-if="entry.type == 0">
+                        <!-- backlight tray feeder -->
+                        <div class="badge">X: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'x')">edit</div> {{entry.x}}</div>
+                        <div class="badge">Y: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'y')">edit</div> {{entry.y}}</div>
+                        <div class="badge">width: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'width')">edit</div> {{entry.width}}</div>
+                        <div class="badge">height: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'height')">edit</div> {{entry.height}}</div>
+                    </td>
+                    <td v-if="entry.type == 1">
+                        <!-- static belt feeder -->
+                        <div class="badge">position: <input type="range" value="0,50" style="width: 500px"/></div>
+                        <div class="badge">capacity: <b>{{entry.pitch}}</b></div>
+                        <div class="badge">pitch: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'x')">edit</div> {{entry.pitch}}</div>
+                        <div class="badge">x_offset: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'x_offset')">edit</div>{{entry.x_offset}}</div>
+                        <div class="badge">y_offset: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'y_offset')">edit</div>{{entry.y_offset}}</div>
+                        <div class="badge">start_pos: <div class="table-button material" v-on:click="do_sequence('belt_set_start', name)">filter_center_focus</div>{{entry.x | round}} / {{entry.y | round}}</div>
+                        <div class="badge">end_pos: <div class="table-button material" v-on:click="do_sequence('belt_set_end', name)">filter_center_focus</div>{{entry.x_end | round}} / {{entry.y_end | round}}</div>
+                        <div class="badge">X: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'x')">edit</div> {{entry.x}}</div>
+                        <div class="badge">Y: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'y')">edit</div> {{entry.y}}</div>
+                        <div class="badge">width: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'width')">edit</div> {{entry.width}}</div>
+                        <div class="badge">height: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'height')">edit</div> {{entry.height}}</div>
+                    </td>
                     <td><div class="table-button material" v-on:click="do_modify_feeder_rotation(name)">refresh</div> {{entry.rot}}</td>
                     <td><div class="table-button material" v-on:click="do_modify_feeder_state(name)">swap_calls</div> {{feeder_state(entry.state)}}</td>
                     <td>
-                        <!--<button v-on:click="do_feeder_test(name)">test pick</button>
-                        <button v-on:click="do_feeder_goto(name)">goto</button>-->
-                        <button v-on:click="do_feeder_delete(name)">delete</button>
                         <button v-on:click="do_sequence('test_feeder', name)">pick</button>
                         <button v-on:click="do_sequence('view_feeder', name)">view</button>
                     </td>
                 </tr>
             </table>
-            <br>
-            <table>
-                <!--table for all belt feeders-->
-                <tr>
-                    <th width="100px">Name</th>
-                    <th width="100px">Type</th>
-                    <th width="80px">Start</th>
-                    <th width="80px">End</th>
-                    <th width="80px">Offset x</th>
-                    <th width="80px">Offset Y</th>
-                    <th width="80px">Pitch</th>
-                    <th width="80px">Rotation</th>
-                    <th width="100px">State</th>
-                    <th width="100px">Action</th>
-                </tr>
-                <tr v-for="(entry, name) in context.feeder"  v-bind:class="{ inactive: entry.state == 0, error: entry.state == 2 }" v-if="entry.type == 1">
-                    <td><div class="table-button material" v-on:click="do_modify_feeder_name(name)">edit</div>{{name}}</td>
-                    <td><div class="table-button material" v-on:click="do_modify_feeder_type(name)">swap_calls</div>{{feeder_type(entry.type)}}</td>
-                    <td><div class="table-button material" v-on:click="do_sequence('belt_set_start', name)">filter_center_focus</div>{{entry.x | round}} / {{entry.y | round}}</td>
-                    <td><div class="table-button material" v-on:click="do_sequence('belt_set_end', name)">filter_center_focus</div>{{entry.x_end | round}} / {{entry.y_end | round}}</td>
-                    <td><div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'x_offset')">edit</div>{{entry.x_offset}}</td>
-                    <td><div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'y_offset')">edit</div>{{entry.y_offset}}</td>
-                    <td><div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'pitch')">edit</div>{{entry.pitch}}</td>
-                    <td><div class="table-button material" v-on:click="do_modify_feeder_rotation(name)">refresh</div>{{entry.rot}}</td>
-                    <td><div class="table-button material" v-on:click="do_modify_feeder_state(name)">swap_calls</div>{{feeder_state(entry.state)}}</td>
-                    <td>
-                        <!--<button v-on:click="do_feeder_test(name)">test pick</button>
-                        <button v-on:click="do_feeder_goto(name)">goto</button>-->
-                        <button v-on:click="do_feeder_delete(name)">delete</button>
-                        <button v-on:click="do_sequence('test_feeder', name)">pick</button>
-                        <button v-on:click="do_sequence('view_feeder', name)">view</button>
-                    </td>
-                </tr>
-            </table>
-            <div style="margin-top: 20px; margin-bottom: 20px">
-                <button style="float: right"  v-on:click="do_feeder_create()">New Feeder</button>
-            </div >
         </div></transition>
 
         <transition name="transition-page"><div class="page" v-if="page == 2">
