--- a/python/web/pickplaz.html
+++ b/python/web/pickplaz.html
@@ -132,7 +132,7 @@
         </div></transition>
 
         <transition name="transition-page"><div class="page" v-if="page == 1">
-            
+
             <table>
                 <!--table for all tray feeders-->
                 <tr>
@@ -146,24 +146,24 @@
                     <td>{{name}} ({{feeder_type(entry.type)}})</td>
                     <td v-if="entry.type == 0">
                         <!-- backlight tray feeder -->
-                        <div class="badge">X: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'x')">edit</div> {{entry.x}}</div>
-                        <div class="badge">Y: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'y')">edit</div> {{entry.y}}</div>
-                        <div class="badge">width: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'width')">edit</div> {{entry.width}}</div>
-                        <div class="badge">height: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'height')">edit</div> {{entry.height}}</div>
+                        <i style="color: gray">tray feeder is static</i>
+                        <!-- <div class="badge">X: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'x')">edit</div> {{entry.position[0]}}</div>
+                        <div class="badge">Y: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'y')">edit</div> {{entry.position[1]}}</div>
+                        <div class="badge">width: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'width')">edit</div> {{entry.position[2]}}</div>
+                        <div class="badge">height: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'height')">edit</div> {{entry.position[3]}}</div> -->
                     </td>
                     <td v-if="entry.type == 1">
                         <!-- static belt feeder -->
-                        <div class="badge">position: <input type="range" value="0,50" style="width: 500px"/></div>
-                        <div class="badge">capacity: <b>{{entry.pitch}}</b></div>
-                        <div class="badge">pitch: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'x')">edit</div> {{entry.pitch}}</div>
-                        <div class="badge">x_offset: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'x_offset')">edit</div>{{entry.x_offset}}</div>
-                        <div class="badge">y_offset: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'y_offset')">edit</div>{{entry.y_offset}}</div>
-                        <div class="badge">start_pos: <div class="table-button material" v-on:click="do_sequence('belt_set_start', name)">filter_center_focus</div>{{entry.x | round}} / {{entry.y | round}}</div>
-                        <div class="badge">end_pos: <div class="table-button material" v-on:click="do_sequence('belt_set_end', name)">filter_center_focus</div>{{entry.x_end | round}} / {{entry.y_end | round}}</div>
-                        <div class="badge">X: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'x')">edit</div> {{entry.x}}</div>
-                        <div class="badge">Y: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'y')">edit</div> {{entry.y}}</div>
-                        <div class="badge">width: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'width')">edit</div> {{entry.width}}</div>
-                        <div class="badge">height: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'height')">edit</div> {{entry.height}}</div>
+                        <div class="badge">position: <input type="range" min="0" :max="entry.capacity" style="width: 500px" v-model="entry.pos"/> {{entry.pos}}/{{entry.capacity}}</div>
+                        <div class="badge">pitch: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'pitch')">edit</div> {{entry.pitch}}</div>
+                        <div class="badge">x_offset: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'x_offset')">edit</div>{{entry.offset[0]}} |
+                                           y_offset: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'y_offset')">edit</div>{{entry.offset[1]}}</div>
+                        <div class="badge">start_pos: <div class="table-button material" v-on:click="do_sequence('belt_set_start', name)">filter_center_focus</div>{{entry.start[0] | round}} / {{entry.start[1] | round}}</div>
+                        <div class="badge">end_pos: <div class="table-button material" v-on:click="do_sequence('belt_set_end', name)">filter_center_focus</div>{{entry.end[0] | round}} / {{entry.end[1] | round}}</div>
+                        <!-- <div class="badge">X: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'x')">edit</div> {{entry.position[0]}}</div>
+                        <div class="badge">Y: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'y')">edit</div> {{entry.position[1]}}</div>
+                        <div class="badge">width: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'width')">edit</div> {{entry.position[2]}}</div>
+                        <div class="badge">height: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'height')">edit</div> {{entry.position[3]}}</div> -->
                     </td>
                     <td><div class="table-button material" v-on:click="do_modify_feeder_rotation(name)">refresh</div> {{entry.rot}}</td>
                     <td><div class="table-button material" v-on:click="do_modify_feeder_state(name)">swap_calls</div> {{feeder_state(entry.state)}}</td>
