--- a/python/web/pickplaz.html
+++ b/python/web/pickplaz.html
@@ -155,7 +155,7 @@
                     </td>
                     <td v-if="entry.type == 1">
                         <!-- static belt feeder -->
-                        <div class="badge">position: <input type="range" min="0" :max="entry.capacity" style="width: 500px" v-model="entry.pos"/> {{entry.pos}}/{{entry.capacity}}</div>
+                        <div class="badge">position: <input type="range" min="0" :max="entry.capacity" style="width: 500px" v-model="entry.pos" v-on:change="api.feeder_modify('pos', name, entry.pos)"/> {{entry.pos}}/{{entry.capacity}}</div>
                         <div class="badge">pitch: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'pitch')">edit</div> {{entry.pitch}}</div>
                         <div class="badge">x_offset: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'x_offset')">edit</div>{{entry.offset[0]}} |
                                            y_offset: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'y_offset')">edit</div>{{entry.offset[1]}}</div>
