--- a/python/web/pickplaz.html
+++ b/python/web/pickplaz.html
@@ -168,6 +168,7 @@
                         <div class="badge">pick_pos: <div class="table-button material" v-on:click="do_sequence('set_roll_pickpos', name)">filter_center_focus</div>{{entry.pickpos[0] | round}} / {{entry.pickpos[1] | round}}</div>
                         <div class="badge">counter: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'counter')">edit</div> {{entry.counter}}</div>
                         <button v-on:click="do_sequence('roll_advance', name)">advance</button>
+                        <button v-on:click="do_sequence('roll_retract', name)">retract</button>
                     </td>
                     <td><div class="table-button material" v-on:click="do_modify_feeder_rotation(name)">refresh</div> {{entry.rot}}</td>
                     <td><div class="table-button material" v-on:click="do_modify_feeder_state(name)">swap_calls</div> {{feeder_state(entry.state)}}</td>
