--- a/python/web/pickplaz.html
+++ b/python/web/pickplaz.html
@@ -166,9 +166,11 @@
                     <td v-if="entry.type == 2">
                         <!-- roll belt feeder (motorized) -->
                         <div class="badge">pick_pos: <div class="table-button material" v-on:click="do_sequence('set_roll_pickpos', name)">filter_center_focus</div>{{entry.pickpos[0] | round}} / {{entry.pickpos[1] | round}}</div>
-                        <div class="badge">counter: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'counter')">edit</div> {{entry.counter}}</div>
-                        <button v-on:click="do_sequence('roll_advance', name)">advance</button>
+                        <div class="badge">counter: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'pos')">edit</div> {{entry.pos}}</div>
+                        <div class="badge">x_offset: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'x_offset')">edit</div>{{entry.offset[0]}} |
+                                           y_offset: <div class="table-button material" v-on:click="do_modify_feeder_attribute(name, entry, 'y_offset')">edit</div>{{entry.offset[1]}}</div>
                         <button v-on:click="do_sequence('roll_retract', name)">retract</button>
+                        <button v-on:click="do_sequence('roll_advance', name)">advance</button>
                     </td>
                     <td><div class="table-button material" v-on:click="do_modify_feeder_rotation(name)">refresh</div> {{entry.rot}}</td>
                     <td><div class="table-button material" v-on:click="do_modify_feeder_state(name)">swap_calls</div> {{feeder_state(entry.state)}}</td>
